--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
 	Hello World !
 	<script>
-		window.location.href='https://fenfa.norrkping.cn/tq';
+		window.location.href='https://fenfa.tuiqiucai.com/tq';
 	</script>
 </body>
